<resources>
    <string name="app_name">Riddles</string>

    <string name="txtExit">Выйти</string>
    <string name="txtAnswer">Ответ</string>
    <string name="txtRiddles">Загадка</string>
    <string name="txtStatus">Статистика</string>

    <string name="txtAnswerChoise">Ваш ответ:</string>
    <string name="txtQuestionsCount">0</string>
    <string name="Separator">/</string>
    <string name="txtQuestionsCountMax">10</string>

    <string name="Riddles"></string>
    <string name="Answer"></string>

    <string name="txtResultAnswer">Укажите ответ</string>
    <string name="txtValidate">Проверка</string>

    <string name="txtRestore">Начать сначала</string>
    <string name="txtEnd">Выход</string>

    <string name="txtStatic">Статистика</string>
    <string name="AllCount">Всего загадок</string>
    <string name="txtAllCount">0</string>
    <string name="True">Правильно</string>
    <string name="txtTrue">0</string>
    <string name="False">Не правильно</string>
    <string name="txtFalse">0</string>

    <string name="txtMain">На главную</string>


</resources>